Headline/headline.css
/* Headline Generator Page one*/
.headline-header {
    letter-spacing: 2px;
}

.main__content {
    border: 1px solid #EFEFEF;
    border-radius: 4px;
    margin-top: 23px;
    width: 1040px;
}

.headline-navigation {
    width: 100%;
    height: 58px;
    background: #e5e9f540
}

.headline-links {
    display: flex;
    align-items: center;
}

.headline-links li {
    padding: 0 10px;
    height: 58px;
}

.headline-links li a {
    color: var(--light-purple);
    padding: 0 10px;
    height: 100%;
    padding-top: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.headline-links li .active-link, .headline-links li a:hover {
    color: var(--purple);
    
}

.headline-links li .active-link{
    border-bottom: 2px solid var(--purple);
}

/* Headline Main Content */
.headline-main-content {
    display: flex;
}

.none{
    display: none;
}

/* Left Hand Side */
.left-main-content {
    width: 75%;
    padding: 38px;
    border-right: 1px solid rgba(141, 144, 145, 0.2);
}

.left-main-content li {
    margin-top: 24px;
}

.left-main-content li p {
    color: var(--primary-blue);
}

.left-main-content input {
    margin-top: 16px;
    width: 296px;
    height: 48px;
    border-radius: 4px;
    color: var(--ash);
    border: 1px solid #efefef;
    outline: none;
    padding: 1rem;
}

.left-main-content input::placeholder {
    color: var(--ash);
    font-size: 14px;
}

.left-main-content .input-hint {
    padding: 26px;
    cursor: pointer;
}

/* Right Hand side */
.right-main-content {
    width: 100%;
    padding-left: 60px;
}

.right-main-content .background-image {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 200px;
}

/* Headline Page Two */
/* Right Hand Side of Page Two */

.right-main-content .save-project-btn {
    background-color: #f6f5fd;
    width: 161px;
    height: 40px;
    border-radius: 8px;
    border: none;
    outline: none;
    color: var(--purple);
    font-size: 16px;
    margin-top: 32px;
    display: block;
    margin-left: 350px;
    cursor: pointer;
}

.right-content {
    margin-top: 40px;
}

.right-content .writer {
    border: 1px solid #F5F6F9;
    width: 520px;
    max-width: 520px;
    height: 70px;
    border-radius: 8px;
    margin-bottom: 40px;
}

.right-content .writer:hover,
.right-content .writer:focus {
    color: var(--purple);
    border: 2px solid var(--purple);
}

.right-content legend{
    display: table;
    float: none;
    margin: 0;
    padding-right: .3rem;
    color: var(--primary-blue);
}

.right-content legend img{
    margin-left: -1rem;
    margin-right: .3rem;
}

@media screen and (-moz-images-in-menus: 0) {
    fieldset {
      position: relative;
    }
    fieldset>legend {
      position: absolute;
      left: 50%;
      top: -12px; /* depends on font size and border */
      background: white; /* depends on background */
      transform: translate(-50%, 0);
    }
}

.right-content legend p{
    margin-top: -35px;
    margin-left: 20px;
}

.right-content .writer .output {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.output .copy-output{
    position: absolute;
    cursor: pointer;
    bottom: 15px;
    right: 25px;
    z-index: 100;
}

.output form {
    width: 100%;
    background: none;
}

.show-output {
    display: flex;
    align-items: center;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 100%;
    max-width: 456px;
    height: 40px;
    background: none;
    outline: none;
    border: none;
    color: var(--ash) !important;
    font-size: 1rem;
    padding: 1rem 3rem 1rem 1.4rem;
}

.show-output span{
    margin-left: .5rem;
}

.edit{
    /* max-width: 100px; */
    text-overflow: clip;
    white-space: nowrap;
    text-decoration: underline;
    outline: none;
    border: none;
}

.show-output::placeholder {
    padding: 0 2.1rem 1rem 0;
    color: var(--ash);
    opacity: 0.5;
}

.show-output.content-edit{
    padding-top: 0;
}

.writer:hover legend{
    color: var(--purple) !important;
}

.copy-output:hover .stroke{
    stroke: var(--purple);
}

.copy-output:hover .fill{
    fill: var(--purple);
}


/* Tool-tip */
.tooltip {
  position: relative;
  display: inline-block;
}

.tooltiptext {
  font-size: 12px;
  visibility: hidden;
  width: 140px;
  background-color: var(--voog-blue);
  color: #fff;
  text-align: center;
  border-radius: 6px;
  padding: 5px;
  position: absolute;
  z-index: 1;
  bottom: 50px;
  right: -25px;
  margin-left: -75px;
  opacity: 0;
  transition: opacity 0.3s;
}

.tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: var(--voog-blue) transparent transparent transparent;
}

.tool-tip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

